# aequatio

./: Desing.md  Dockerfile  JWT_AUTHENTICATION.md  Makefile  QUICK_START.md  README.md  REGISTRATION_SETUP.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  reqs.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_events_outbox.py  0002_create_user.py  fdd60a6ec253_add_expense_model_and_user_relationship.py
app/: __init__.py
app/api/v1/: __init__.py  routers.py
app/api/v1/schemas/: auth.py  expense.py  user.py
app/application/: __init__.py
app/application/services/: __init__.py  expense_service.py  user_service.py
app/core/: config.py  database.py  db.py  security.py
app/domain/entities/: __init__.py  expense.py  user.py
app/domain/events/: __init__.py  handlers.py  schema.py
app/events/: schemas.py
app/outbox/: dispatcher.py  models.py  repository.py
app/persistence/models/: expense.py  outbox.py  user.py
app/persistence/repositories/: __init__.py  expense_repository.py  user_repository.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx
frontend/src/components/: ApiButton.tsx  AuthButtons.tsx  ExpenseForm.tsx  ExpensesList.tsx  GroupPanel.tsx  Header.tsx  Landing.tsx  RegisterForm.tsx
migrations/versions/: 0001_create_events_outbox.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_expense.py  test_expense_repository.py  test_expense_service.py  test_outbox_repository.py  test_security.py  test_smoke.py  test_user.py  test_user_repository.py  test_user_service.py
