[project]
name = "aequatio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.118.2",
    "passlib[bcrypt]>=1.7.4",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]

[tool.setuptools]
packages = ["app"] 

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "black",
]
[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
]
